--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
 }
 
 header {
+    min-height: 700px !important;
     padding: 120px 0; /* Example padding for header content */
     background-color: #E8D9C2; /* Example background color */
 }
@@ -32,12 +33,24 @@ header {
     display: block; /* Removes any extra space beneath the image */
 }
 
+@media (max-width: 400px) {
+    .rounded-circle-container {
+        width: 150px;
+        height: 150px;
+    }
+}
+
 header h1 {
     font-family: Margarine, sans-serif;
 }
 
 h2 {
     font-family: Margarine, sans-serif;
+}
+
+#dynamic-content {
+    white-space: pre-wrap; /* Allow wrapping of text */
+    overflow-wrap: break-word; /* Wrap long words */
 }
 
 .fixed-top {
