--- a/style.css
+++ b/style.css
@@ -40,13 +40,13 @@ header {
     }
 }
 
-header h1 {
+/* header h1 {
     font-family: Margarine, sans-serif;
 }
 
 h2 {
     font-family: Margarine, sans-serif;
-}
+} */
 
 #dynamic-content {
     white-space: pre-wrap; /* Allow wrapping of text */
@@ -63,7 +63,7 @@ h2 {
   
 #mainNav .navbar-brand,
 #mainNav .navbar-nav .nav-link {
-    font-family: Margarine, sans-serif !important;
+    /* font-family: Margarine, sans-serif !important; */
     color: white !important; /* Change text color to white */
 }
 
