--- a/style.css
+++ b/style.css
@@ -40,13 +40,12 @@ header {
     }
 }
 
-/* header h1 {
-    font-family: Margarine, sans-serif;
-}
-
-h2 {
-    font-family: Margarine, sans-serif;
-} */
+.btn-earth {
+    background-color: #BBD0A5; /* Adjust this color code to your preferred earth tone */
+    color: #fff; /* Text color for better contrast */
+    border-color: #BBD0A5; /* Matching border color */
+    color:maroon;
+  }
 
 #dynamic-content {
     white-space: pre-wrap; /* Allow wrapping of text */
